--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run -- dir src/services",
+    "test:e2e": "vitest run -- dir src/http",
+    "test:watch": "vitest -- dir src/services",
     "test:covarege": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
